# prpl-tidybot

./: .gitignore  .pylintrc  .tmuxinator.yml  LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml
conf/env/: base_motion3d.yaml  ground3d.yaml  kinematic-shelf3d-o1.yaml  motion3d.yaml  prpl3d-o1.yaml
conf/lab/: default.yaml  prpl.yaml
hardware_tests/: test_arm_extend_via_env.py  test_arm_gripper.py  test_arm_ik_home.py  test_arm_retract.py  test_arm_state_read.py  test_arm_target.py  test_arm_up_and_back.py  test_base_forward.py  test_base_map_target.py  test_base_state_read.py  test_cameras.py  test_marker_detector_visualize.py
scripts/: demo.py  demo_real_to_sim_to_real.py  launch.sh  run_marker_detector_server.py  run_planner.py  run_remote.sh  stop_servers.sh
src/prpl_tidybot/: camera_constants.py  constants.py  coord_converter.py  pipeline.py  preview.py  real_env.py  recording.py  rendering.py  sim_env.py  structs.py  utils.py
src/prpl_tidybot/control/: arm_movement.py  base_movement.py  gripper_movement.py
src/prpl_tidybot/interfaces/: arm_interface.py  base_interface.py  camera_interface.py  interface.py  real_arm_interface.py  real_camera_interface.py
src/prpl_tidybot/marker_detector/: 99-webcam.rules  __init__.py  camera_client.py  camera_server.py  ceiling_image_client.py  ceiling_image_publisher.py  client.py  constants.py  publisher.py  server.py  utils.py
src/prpl_tidybot/marker_detector/camera_params/: AD8A29AE.json  AD8A29AE.yml
src/prpl_tidybot/marker_detector/camera_params/prpl/: 5A5C29AE.json  5A5C29AE.yml
src/prpl_tidybot/real_sim/: __init__.py
src/prpl_tidybot/real_sim/action_grounders/: kinematic3d.py  passthrough.py
src/prpl_tidybot/real_sim/perceivers/: kinematic3d.py  passthrough.py  target_source.py
src/prpl_tidybot/real_sim/plan_executors/: __init__.py  arm_motion3d.py  base_motion3d.py  distance_factories.py  kinematic3d.py  passthrough.py
tests/: test_coord_converter.py  test_pipeline.py  test_preview.py  test_real_env.py  test_recording.py  test_rendering.py  test_sim_env.py  test_smoke.py  test_structs.py  test_utils.py
tests/control/: test_arm_movement.py  test_base_movement.py  test_gripper_movement.py
tests/interfaces/: test_arm_interface.py  test_base_interface.py  test_camera_interface.py  test_interface.py
tests/marker_detector/: test_ceiling_image_publisher.py
tests/real_sim/: test_runner_integration.py
tests/real_sim/action_grounders/: test_kinematic3d.py  test_passthrough.py
tests/real_sim/perceivers/: test_kinematic3d.py  test_passthrough.py  test_target_source.py
tests/real_sim/plan_executors/: test_arm_motion3d.py  test_base_motion3d.py  test_kinematic3d.py  test_passthrough.py
