[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prpl_tidybot"
version = "0.1.0"
description = "Code for the real TidyBot++ robot and a real-to-sim-to-real pipeline."
readme = "README.md"
requires-python = ">=3.10.14, <3.13"
dependencies = [
   "numpy",
   "matplotlib",
   "gymnasium",
   "spatialmath-python",
   "prpl_utils>=0.0.6",
   "relational_structs>=0.0.1",
   "kindergarden>=0.1.3",
   "hydra-core",
   "kinder_bilevel_planning @ git+https://github.com/Princeton-Robot-Planning-and-Learning/kinder-baselines.git@94fe4d2#subdirectory=kinder-bilevel-planning",
   "kinder_models @ git+https://github.com/Princeton-Robot-Planning-and-Learning/kinder-baselines.git@94fe4d2#subdirectory=kinder-models",
   "phoenix6",
   "ruckig",
   "threadpoolctl",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prpl_tidybot = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "spatialmath.*",
    "moviepy.*",
]
ignore_missing_imports = true
