[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prpl_tidybot"
version = "0.1.0"
description = "Code for the real TidyBot++ robot and a real-to-sim-to-real pipeline."
readme = "README.md"
requires-python = ">=3.10.14, <3.11"
dependencies = [
   "numpy",
   "matplotlib",
   "gymnasium",
   "spatialmath-python",
   "prpl_utils>=0.0.7",
   "relational_structs>=0.0.1",
   "kindergarden>=0.1.3",
   "hydra-core",
   "kinder_bilevel_planning @ git+https://github.com/Princeton-Robot-Planning-and-Learning/kinder-baselines.git@dd8d419#subdirectory=kinder-bilevel-planning",
   "kinder_models @ git+https://github.com/Princeton-Robot-Planning-and-Learning/kinder-baselines.git@dd8d419#subdirectory=kinder-models",
   "phoenix6==25.1.0",
   "ruckig",
   "setuptools<81",
   "threadpoolctl",
   "opencv-contrib-python==4.6.0.66",
   "pin",
   "kortex-api==2.6.0.post3",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.uv]
# The kortex wheel pins protobuf==3.5.1 (too old for everything else in the
# tree); pin it to a version that actually works. Override applied across the
# whole dependency graph at resolve time so kortex doesn't drag the old one
# back in. Required when uv resolves kortex_api from the local wheel below.
override-dependencies = ["protobuf==3.20.0"]

[tool.uv.sources]
# kortex_api isn't on pypi — Kinova distributes it as a local wheel. Pointing
# `tool.uv.sources` at the in-repo wheel makes it a normal pyproject dep that
# uv tracks in `uv.lock` and reinstalls on every `uv sync`, instead of needing
# a manual `uv pip install kortex_wheels/...whl` that the next sync would wipe.
kortex-api = { path = "kortex_wheels/kortex_api-2.6.0.post3-py3-none-any.whl" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prpl_tidybot = ["py.typed"]
"prpl_tidybot.marker_detector" = ["99-webcam.rules"]
"prpl_tidybot.marker_detector.camera_params" = ["*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "spatialmath.*",
    "moviepy.*",
]
ignore_missing_imports = true

